StringBuilder::append(UChar) with an 8 bit quantity shouldn't change the contents to 16 bits https://bugs.webkit.org/show_bug.cgi?id=101421

Reviewed by Anders Carlsson.

If the string builder contains only 8 bit data, check if the character being appended contains
8 bit data.  If so, append it to the 8 bit buffer instead of converting the buffer to 16 bits.

* wtf/text/StringBuilder.cpp:
(WTF::StringBuilder::append):
* wtf/text/StringBuilder.h:
(WTF::StringBuilder::append):


Canonical link: https://commits.webkit.org/119528@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133726 268f45cc-cd09-0410-ab3c-d52691b4dbfc